2014-12-02  Philippe Normand  <pnormand@igalia.com>

        [GStreamer] Bump internal jhbuild versions to 1.4.4
        https://bugs.webkit.org/show_bug.cgi?id=138866

        Reviewed by Carlos Garcia Campos.

        * gtk/jhbuild.modules:
        * gtk/patches/gst-events-arent-gstobjects.patch: Removed.
        * gtk/patches/gst-plugins-base-fix-build-gcc-4.9-x86.patch: Removed.
        * gtk/patches/gst-prevent-neon-check-in-configure-from-passing-under-aarch64.patch: Removed.

2014-12-01  Commit Queue  <commit-queue@webkit.org>

        Unreviewed, rolling out r176566.
        https://bugs.webkit.org/show_bug.cgi?id=139124

        It broke the GTK performance tests. (Requested by clopez on
        #webkit).

        Reverted changeset:

        "[GTK] Use GMainLoopSource in WebKitTestRunner"
        https://bugs.webkit.org/show_bug.cgi?id=138831
        http://trac.webkit.org/changeset/176566

2014-11-29  Anders Carlsson  <andersca@apple.com>

        Crash when calling WKPageClose on the originated page from within createNewPage callback
        https://bugs.webkit.org/show_bug.cgi?id=139099
        <rdar://problem/19052564>

        Reviewed by Sam Weinig.

        Add a test.

        * TestWebKitAPI/PlatformWebView.h:
        * TestWebKitAPI/TestWebKitAPI.xcodeproj/project.pbxproj:
        * TestWebKitAPI/Tests/WebKit2/CloseFromWithinCreatePage.cpp: Added.
        (TestWebKitAPI::runJavaScriptAlert):
        (TestWebKitAPI::createNewPage):
        (TestWebKitAPI::TEST):
        * TestWebKitAPI/Tests/WebKit2/close-from-within-create-page.html: Added.
        * TestWebKitAPI/mac/PlatformWebViewMac.mm:
        (TestWebKitAPI::PlatformWebView::PlatformWebView):

2014-11-28  Commit Queue  <commit-queue@webkit.org>

        Unreviewed, rolling out r176564.
        https://bugs.webkit.org/show_bug.cgi?id=139093

        massive failures on release test bot (Requested by philn on
        #webkit).

        Reverted changeset:
