@@ -1,5 +1,15 @@
 2014-12-02  Philippe Normand  <pnormand@igalia.com>
 
+        [jhbuild] wrong Dependencies path
+        https://bugs.webkit.org/show_bug.cgi?id=139176
+
+        Reviewed by Martin Robinson.
+
+        * Scripts/webkitpy/port/base.py:
+        (Port._should_use_jhbuild):
+
+2014-12-02  Philippe Normand  <pnormand@igalia.com>
+
         [GStreamer] Bump internal jhbuild versions to 1.4.4
         https://bugs.webkit.org/show_bug.cgi?id=138866
 
